--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,10 +16,11 @@ tauri-build = { version = "1.4", features = [] }
 tauri = { version = "1.4", features = ["shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tokio = { version = "1.24", default-features = false, features = ["sync"] }
 [dependencies.matrix-sdk]
 path = "../../matrix-rust-sdk/crates/matrix-sdk"
 version = "0.6.0"
-features = ["experimental-widgets"]
+features = ["experimental-widget-api"]
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
