--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,10 +17,11 @@ tauri = { version = "1.4", features = ["shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.24", default-features = false, features = ["sync"] }
+async-channel = "1.9.0"
 [dependencies.matrix-sdk]
 path = "../../matrix-rust-sdk/crates/matrix-sdk"
 version = "0.6.0"
-features = ["experimental-widget-api"]
+features = ["experimental-widgets"]
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
