--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.24", default-features = false, features = ["sync"] }
 async-channel = "1.9.0"
+tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 [dependencies.matrix-sdk]
 path = "../../matrix-rust-sdk/crates/matrix-sdk"
 version = "0.6.0"
