--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,6 +19,8 @@ serde_json = "1.0"
 tokio = { version = "1.24", default-features = false, features = ["sync"] }
 async-channel = "1.9.0"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
+uuid = "1.4.1"
+urlencoding = "2.1.3"
 [dependencies.matrix-sdk]
 path = "../../matrix-rust-sdk/crates/matrix-sdk"
 version = "0.6.0"
