--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,8 @@ async-channel = "1.9.0"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 uuid = "1.4.1"
 urlencoding = "2.1.3"
+url = "2.4.1"
+
 [dependencies.matrix-sdk]
 path = "../../matrix-rust-sdk/crates/matrix-sdk"
 version = "0.6.0"
