--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,6 +22,7 @@ tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 uuid = "1.4.1"
 urlencoding = "2.1.3"
 url = "2.4.1"
+clone_all = "0.1.1"
 
 [dependencies.matrix-sdk]
 path = "../../matrix-rust-sdk/crates/matrix-sdk"
